style-fix(gap safari) fix old commit

--- a/src/style/responsive.css
+++ b/src/style/responsive.css
@@ -29,8 +29,6 @@
     #todo-form .form-control{
         display: flex;
         flex-wrap: wrap;
-        gap: 8rem; /* Safari 12+ */
-        grid-gap: 8rem; /* Safari 10-11 */   
     }
 
     #todo-form .form-control input{
@@ -41,11 +39,13 @@
     
     #todo-form .form-control button{
         flex: 1;
+        margin-top: 8px;
     }
 
     #todo-form .form-control button:nth-of-type(1){
         order: 1;
         flex: 1 1 100%;
+        margin-left: 8px;
     }
 
     #todo-form .form-control #clear-button{
